test/files/neg/t1503.check
t1503.scala:10: error: type mismatch;
 found   : n.type (with underlying type Any)
 required: scala.collection.immutable.Nil.type
  val a: Nil.type = (Vector(): Any) match { case n @ Nil => n }       // error
                                                            ^
t1503.scala:12: error: type mismatch;
 found   : n.type (with underlying type Any)
 required: scala.collection.immutable.Nil.type
  val b: Nil.type = (Vector(): Any) match { case n @ (m @ Nil) => n } // error was: CCE
                                                                  ^
2 errors
